first part of discussion

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -374,6 +374,8 @@ Within the emerging idioculture of the game making sessions, and during playtest
    Toby: (To someone else  calling for attention)  No I’m helping Bertie.
    _(Toby then follows Bertie to his workstation to help him implement more levels.)_
 
+In addition to peer feedback, in P2 myself and other facilitators would often provoke informal reflection on project progress through asking what patterns they were currently working or had recently completed.
+EVIDENCE? PRESENCE / FREQUENCY?  
 
 Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
 
@@ -395,6 +397,8 @@ In addition to the propagation of GDPs offered n the menu of supporting document
 DEVELOP
 
 These novelties may emerge spontaneously or have a source in  part participants' funds of gaming knowledge. In either case once the concept of safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, they may spread if other participants pick up on them. Even if other participants only noticed the use of GDPs and use approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystems of the learning community.
+
+**synthesis of this section**
 
 ### Summary of cultural section - and signposting to next chapter
 
@@ -856,16 +860,18 @@ Appendix.learningmap explores in more detail the evolution of this map, which ac
 This exploration focuses on the potential of the 3M learning design rather than making claims on the suitability to develop CT via game making which is explored extensively in other research. Conceptions of personal appropriation should not be limited to only the curricular concepts included in the learning map, the many of the behaviours explored above show both the appropriation and feeding back of varied understandings of game design patterns and related concepts and skills. While the design of this study does not suit full exploration of the personal plane of activity, the repeated, solo, incremental changes of the details of implementation of game design patterns indicate a personal appropriation of concepts like game feel and challenge and design processes.
 
 
-The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process.
+<!-- The process of reusing and modify code to create a computer game can surface both abstract and concrete computing concepts present in the concrete application of code that have emerged organically at different stages of the creative process. -->
 
 Given that this dimension is not explored in the thesis which has a greater focus on community and social aspects of use of GDPs, examples of personal appropriation are included in Appendix.learning
+
+The ongoing reflection provoked by the process of privileging social and cultural aspects of the game making activity has yielded more philosophical questions in relation to the learning process which are explored in the following discussion section.
 
 
 <!-- Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly. -->
 
 ## Discussion
 
-The majority of this chapter has focused on interpretation of observations of participant use of GDPS as a mediational strategy / repertoire.
+The majority of this chapter has focused on findings and immediate interpretation of participant and facilitator use of GDPS as a mediational strategy / repertoire. This section takes a step back to explore the wider perspectives of the findings beyond the immediate context to digital making and project based approaches and understandings of design patterns in educational contexts.
 
 In this discussion section, I:
 
@@ -875,25 +881,29 @@ In this discussion section, I:
 
 - explore potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct.
 
-
-
 ### Discussion of findings in relation to CHAT conceptions of abstraction
 
-"While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction" [@sannino_activity_2011].
+The previous section began to explored, through the lens of personal appropriation, to variety of skills suitable for development via this learning design. The final section surfaced a  distinction between curricular contents commonly associated with a more abstract understandings of personal knowledge, including more abstract elements of computation thinking. This section continues an interpretation of this chapters findings and an socio-cultural understanding of learning using activity theory as a framework. This investigation has required a careful investigation of abstract-concrete dimensions of emerging knowledge happening in the game making and digital making more generally. To start, let us consider the nature of the abstraction of gameplay design patterns via Sannino' [-@sannino_activity_2011] distinction between empirical and theoretical abstraction.
+
+    "While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutiny. A theoretical abstraction is based on a functional relationship, also called a germ cell." [@sannino_activity_2011].
 
 <!-- There are two types of abstractions: empirical and theoretical. Empirical abstraction
 is a classification of superficial features of phenomena. Theoretical abstraction refers to the identification of the genetic origins of phenomena that may externally be not alike at all. A theoretical abstraction is based on a functional relationship, also called a germ cell.  While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutiny
 Title: Activity theory as an activist and interventionist theory, Author: Sannino, Date: 10/2011 -->
-
 <!-- A deeper exploration of other concepts may suit another chapter looking at synthesing observations in relation to broader research.  -->
 
+In this research, the empirical level of abstraction is  present in P1 and in P2 where features to be added to the game were classified gameplay features and categorised according to to the existing MDA framework. Moving beyond the empirical towards the theoretical aspect, is the early positioning of each feature as a gameplay design pattern which can be described and supplemented with a suggested code structures and examples.
+ANY OTHERS
 
-In this research, the empirical level of analysis outlines the listing of features which can be added to game, and categorisation into groups based around MDA framework. Moving beyond this empirical categorisation towards a theoretical aspect, the germ cell of the Gameplay Design Pattern becomes more theoretical and generalisable in the varied uses as meditational strategies and as integrated into varied forms of creative cultural and interpersonal repertoires. It is this movement from a kernel idea into varied concrete instances that is the root of the power of the approach according to CHAT scholars.
+The key, guiding conception here becomes the pedagogical utility of a strong coupled link between a feature of an observable game product (in this case gameplay design patterns) and scaffolding resources available within a community. This concept becomes the root of the varied approaches and forms of support outlined in this chapter. Some instances based on this kernel concept were created by myself in response to user requests in varied forms of support documentation outlined in Chapter 5 ( e.g. quick start cards, a home menu of GDPs, code snippets, stepped tutorials ). Many other examples, as outlined above were more spontaneous and informal, spreading from peer to peer in the community often during playtesting.  
 
-As to way it is useful.
-From the perspective of participants and facilitators, the process can be transferred to other design projects
+It is this movement from a kernel idea into varied concrete instances that is the root of the power of the approach according to CHAT scholars.  While, the varied uses as meditational strategies and their integration into varied concrete forms of creative cultural and interpersonal repertoires many be particular to this setting, the germ cell concept described above is a theoretical and generalisable abstraction not particular to this context.
 
-While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects.
+While the educational use of design patterns and has been explored in other settings via research, the focus has been on professional rather than novice learners.  
+
+While I address areas for future research in the conclusion, a proposed benefit of this research is to underscore the potential and to uncover a starting point for pedagogies that can be transferred to diverse design projects.
+
+<!-- While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects. -->
 
 
 ### Discussion of findings in relation to Computational Thinking and  abstraction
