--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -901,22 +901,28 @@ It is this movement from a kernel idea into varied concrete instances that is th
 
 While the educational use of design patterns and has been explored in other settings via research, the focus has been on professional rather than novice learners.  
 
-While I address areas for future research in the conclusion, a proposed benefit of this research is to underscore the potential and to uncover a starting point for pedagogies that can be transferred to diverse design projects.
+While I address areas for future research in the conclusion, a proposed benefit of this research is While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects.to underscore the potential and to uncover a starting point for pedagogies that can be transferred to diverse design projects.
 
 <!-- While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects. -->
 
 
 ### Discussion of findings in relation to Computational Thinking and  abstraction
 
-I propose design patterns as a more relatable abstract framework than more abstract interpretations of computational thinking following Wing.
+**patterns as a more relatable abstract framework than more abstract interpretations of computational thinking following Wing.**
 
-#### Design patterns as a intermediate-level, pedagogical framework
+
+
+
+
+#### Design patterns as a intermediate-level, pedagogical framework compared to computational thinking
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
 
+Given that CT is a dominant abstract framework in this area, how can the use of GDPs be compared.
+
 In chapter two I described the characteristic and limits of computational thinking as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
 
-RESTRUCTURE FOLLOWING TO SUPPORT THIS STATEMENT.
+RESTRUCTURE FOLLOWING TO SUPPORT THIS STATEMENT - as END POINT 
 The evidence and examples surfaced in this paragraph support a claim that GDPs, as an intermediate-level organisation framework between abstract and concrete coding concepts.  
 
 
