on game design patterns.

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -918,20 +918,31 @@ While I address areas for future research in the conclusion, a proposed benefit 
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
 
-Given that CT is a dominant abstract framework in this area, how can the use of GDPs be compared.
+It is productive to ask: how can the use of GDPs as a framework be compared to that of computational thinking given CT's is a dominance in this area?
 
-In chapter two I described the characteristic and limits of computational thinking as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
+In chapter two I described the characteristics and limits of computational thinking as a pedagogical framework, specifically concepts include: varied interpretations; the role of levels of abstraction for teachers and learners; and the value of epistemological pluralism as a way to value concrete approaches.
 
-RESTRUCTURE FOLLOWING TO SUPPORT THIS STATEMENT - as END POINT 
-The evidence and examples surfaced in this paragraph support a claim that GDPs, as an intermediate-level organisation framework between abstract and concrete coding concepts.  
+<!-- Through this lens the most abstract activity system is the larger one who's objective, to make an engaging game that tells an environmental story, aligns with the problem level of LOA. The level between abstract and concrete is that of choosing, implementing and testing game design patterns, which aligns with design. The most concrete in this interpretation is then the implementation of different lines of code or creation and migration of digital assets. -->
+
+Waite's interpretation of levels of abstraction and semantic waves in a computing education context is potentially relevant as example of how can contribute to the debate in this area. In terms of semantic waves, the movement between abstract and concrete is helpful to address some of the issues concerning inclusion and accessibility of overly abstract approaches [@papert_epistemological_1990]. However, if we return to Papert and Turkle's [-@papert_epistemological_1990] challenge to the legitimacy of the primacy of abstract, top-down approaches to teaching coding, such an approach would also challenge Waite rationale of alternating between abstract and concrete poles.
+
+While, none of the author's above are clear about what exactly is meant by the abstract in their explorations, a synthesis of relevant literature supports an spectrum of abstraction, from Wing's take on CT at the most abstract, and specifics coding constructs or even syntax at the most concreted. Such a spectrum is in is broadly in line with LOA interpretation, although the purpose is shown as the higher level of abstraction. ANY DIFFERENCES?
 
 
----
+This direction of the findings of this chapter, support findings on design patterns in other contexts as a middle ground between abstract CT concepts and more concrete techniques.
 
-DROP THIS PARAGRAPH? OR COMPRESS AND TACK ON TO LAST ONE?
-This conception of levels abstraction can be applied in this learning design to the different scopes game making activity systems. Through this lens the most abstract activity system is the larger one who's objective, to make an engaging game that tells an environmental story, aligns with the problem level of LOA. The level between abstract and concrete is that of choosing, implementing and testing game design patterns, which aligns with design. The most concrete in this interpretation is then the implementation of different lines of code or creation and migration of digital assets.
+    In order to be useful, patterns must present an abstraction of good practice at a meaningful level of granularity. Formulations that are too abstract will be impractical in real design use; those that are too specific will be difficult to re-use in new scenarios.[@dearden_pattern_2006, p. 20]
 
----
+Such an interpretation is adopted by Eriksson and colleagues using gameplay design patterns with young people [-@eriksson_using_2019] which drew inspiration from the value of design patterns as a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research [@barendregt_intermediate-level_2018].
+
+
+**In terms of recommendations for researchers / practitioners of an intermediate framework:**
+According to [@barendregt_intermediate-level_2018]  when choosing design patterns, choosing a suitable the level of abstraction is recommended.  
+
+Whereas the motivation of LOA is that is is useful for learners to know at what level of abstraction they are operating, I propose that a stronger utility is that facilitators are aware of the level of abstraction. Different purposes and contexts of learning may require different interpretations, for example greater awareness of abstract concepts for reasons of assessment.
+
+The evidence and examples surfaced in this paragraph support a this view of GDPs, as an productive intermediate-level framework and contributes a series of grounded pedagogical instances via examples. It also proposes GDPs as potentially more productive and accessible framework in terms of pedagogical uses than that of computational thinking when making games. 
+
 
 
 <!-- As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show  -->
@@ -943,13 +954,7 @@ As previously explored I had a reluctance to shift learners away from the practi
 
 
 
-RECAP OTHER WORK ON GDP AND THEIR USES - REINTERPRETE IT VIA AT CONCEPTS - MEDIATION
 
-In professional coding environment and training programmes design patterns are seen as a middle ground between abstract CT concepts and more concrete techniques. In chapter two I outlined the work of Eriksson and colleagues using gameplay design patterns with young people [-@eriksson_using_2019] which drew inspiration from the value of design patterns as a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research [@barendregt_intermediate-level_2018]. In addition, when choosing design patterns, choosing a suitable the level of abstraction is recommended.  
-
-    In order to be useful, patterns must present an abstraction of good practice at a meaningful level of granularity. Formulations that are too abstract will be impractical in real design use; those that are too specific will be difficult to re-use in new scenarios.[@dearden_pattern_2006, p. 20]
-
-Similarly, here the implementation of GDPs as a key unit of activity and analysis for this study, the justification being that it was at this level that richest use and development of tools and processes by the emerging community took place.
 
 #### Concrete and relatable levels of abstraction - linking this communities experiences with existing literature
 
