On abstract etc.

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -897,7 +897,7 @@ ANY OTHERS
 
 The key, guiding conception here becomes the pedagogical utility of a strong coupled link between a feature of an observable game product (in this case gameplay design patterns) and scaffolding resources available within a community. This concept becomes the root of the varied approaches and forms of support outlined in this chapter. Some instances based on this kernel concept were created by myself in response to user requests in varied forms of support documentation outlined in Chapter 5 ( e.g. quick start cards, a home menu of GDPs, code snippets, stepped tutorials ). Many other examples, as outlined above were more spontaneous and informal, spreading from peer to peer in the community often during playtesting.  
 
-It is this movement from a kernel idea into varied concrete instances that is the root of the power of the approach according to CHAT scholars.  While, the varied uses as meditational strategies and their integration into varied concrete forms of creative cultural and interpersonal repertoires many be particular to this setting, the germ cell concept described above is a theoretical and generalisable abstraction not particular to this context.
+The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011]. It is this movement from a kernel idea into varied concrete instances that is the root of the power of the approach according to CHAT scholars.  While, the varied uses as meditational strategies and their integration into varied concrete forms of creative cultural and interpersonal repertoires many be particular to this setting, the germ cell concept described above is a theoretical and generalisable abstraction not particular to this context.
 
 While the educational use of design patterns and has been explored in other settings via research, the focus has been on professional rather than novice learners.  
 
@@ -909,9 +909,6 @@ While I address areas for future research in the conclusion, a proposed benefit 
 ### Discussion of findings in relation to Computational Thinking and  abstraction
 
 **patterns as a more relatable abstract framework than more abstract interpretations of computational thinking following Wing.**
-
-
-
 
 
 #### Design patterns as a intermediate-level, pedagogical framework compared to computational thinking
@@ -939,54 +936,60 @@ Such an interpretation is adopted by Eriksson and colleagues using gameplay desi
 **In terms of recommendations for researchers / practitioners of an intermediate framework:**
 According to [@barendregt_intermediate-level_2018]  when choosing design patterns, choosing a suitable the level of abstraction is recommended.  
 
-Whereas the motivation of LOA is that is is useful for learners to know at what level of abstraction they are operating, I propose that a stronger utility is that facilitators are aware of the level of abstraction. Different purposes and contexts of learning may require different interpretations, for example greater awareness of abstract concepts for reasons of assessment.
+One motivation of LOA is that is is useful for learners to know at what level of abstraction they are operating,
 
-The evidence and examples surfaced in this paragraph support a this view of GDPs, as an productive intermediate-level framework and contributes a series of grounded pedagogical instances via examples. It also proposes GDPs as potentially more productive and accessible framework in terms of pedagogical uses than that of computational thinking when making games. 
+My own notes and reflections in appendix.learning map cautioned me against such shifts in perspectives for fear of interrupting the flow of participant making. I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus. There were already shifting from the larger goal of making an engaging game for a real and imagined audience to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. This chapter has outlined the potential of GDP concepts, especially used within playtesting, to support these participant shifts in perspective. To then add an additional goal of then connecting to abstract curricular concepts seemed counter productive to the overall aim of acculturation to game making tools and processes and developing an inclusive idioculture.
 
+As such this research has only more theoretical propositions rather than participant data. However, my reflections do support a proposition that there is  utility is that facilitators to be aware of the level of abstraction both that present in different elements of project learning design and that of the concepts that learners are working with. Different purposes and contexts of learning may require different interpretations, for example greater awareness of abstract concepts for reasons of assessment.
 
+The evidence and examples surfaced in this paragraph support a this view of GDPs, as an productive intermediate-level framework and contributes a series of grounded pedagogical instances via examples. It also proposes GDPs as potentially more productive and accessible framework in terms of pedagogical uses than that of computational thinking when making games.
+
+**integrate better**
+
+Beyond changing perspectives in participants facilitated by GDPs outline above, addressing the impact of scaffolding awareness of and reflection on shifts in levels of abstraction in the coding and design process, may be tangential to this study, it is a potentially productive strand of future investigation.  
+
+Levels of abstraction and shifting perspectives also exist in formal analysis of game design frameworks [Salen, and MDA].
+In the theoretical underpinning, Aesthetics are the first experience of the user, and the designer most closely aligned with mechanics.
+
+Could awareness of this their shifts in perspective in relation to this MDA framework be helpful to novices.
+
+Could link between the MDA framework and main areas of GDPs can be used to deepen a possibly profitable connection to professional design lenses theory practices?
+
+Other questions concerning LOA for participants / facilitators.
+
+This learnign design could be a good base to use to answer those questions.
 
 <!-- As explored in the design chapter, later revisions of the design of supporting materials for each GDP included links to online descriptions of design, systems and computational concepts. Thus, beginning with experience and progressing to analysis in a sway that mirrors reflective professional practice. However analysis of my journal entries show  -->
 
 <!--
 SHIFT LATER?
-
 As previously explored I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. -->
 
 
 
-
-
-#### Concrete and relatable levels of abstraction - linking this communities experiences with existing literature
-
-The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011].
-
-In this study, experience of the features and behaviour of game are concrete. The concept of design pattern that can be applied to more than one game is more abstract. And more abstract still are computing concepts like abstraction and pattern recognition which are present in the game code and problem solving processes.
-
-MOVE LATER WORK ON MDA HERE
-IS THIS REALLY CULTURAL ? - IF SO HOW - OR CHANGE THE FRAMING
-Linking to wider cultural activity beyond this learning intervention, the analysis of this chapter highlights dimension of the use of GDPs on a cultural level that also exist in formal analysis of game design frameworks [Salen, and MDA].
-I propose that the link between the MDA framework and main areas of GDPs can be used to deepen a possibily profitable connection to professional practices?
-
-The varied use of the collection and individuals gameplay patterns and concepts, can be examined using the lenses of the MDA framework.  
+<!-- The varied use of the collection and individuals gameplay patterns and concepts, can be examined using the lenses of the MDA framework.  
 - Home knowledge of mechanics drove many of the requests for GDPs from popular medium of retro games  
 - The norming practices often focus on the game feel, which relates most directly to the dynamics lens.  
-- Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimensions fully constitute a gameplay design pattern, they are an important inclusive element of the design.
-
-
-
-TO ADD - The MDA framework , and related work on game design frameworks bring a focus to levels of abstraction. The utility LOA is promoted by Waite and Sentence in a focus of computing education [INSERT HOW AND WHY]. While, I chose not to explore this explicitly in my teaching, one potential avenue to explore is the question, is the design helping participants to make their concrete knowledge potentially transferable to other problems?
-
-Around this abstract different behaviour patterns form
-And the concept can be embodied on design artefacts
-And can be observed an designed for.
-
+- Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimensions fully constitute a gameplay design pattern, they are an important inclusive element of the design. -->
 
 
 #### Synthesis between intermediate and empirical/theoretical perspectives.
 
-Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation. In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in design perspective (MDA here?).
+RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH
 
-Both the GDPs and the sub-actions of the wider activity design become short-cuts which stand in for previously tricky to complete set of actions. Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
+Thus this chapter returns to celebrate with Papert and Turkle's the process of concrete tinkering, but also to suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially response whilst still retaining a unifying pedagogical approach.
+
+In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the nexts.  
+Any other analysis on the part of the participant can wait until the process becomes more familiar.
+
+This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
+
+
+**Some of the following processes stand out for particular promise.** LINK TO THE SUGGESTIONS FOR PractitionerS. 
+
+Both the GDPs and the sub-actions of the wider activity design become short-cuts which stand in for previously tricky to complete set of actions.
+
+Rather than promising the transfer abstract concepts to other domains, we see learners build competency in participation in replicable processes. These processes which aid future iterations of the GDP implementation design cycle. The process of operationalisation of these sets of actions contributes to the creation of an informal, complex networked resource of operations which complement the more visible curated catalogue of GDPs.
 
 Game design patterns or their fragments are used as a form of design short cuts. Examples from the above include, _get an enemy in_ , _animate player_ or _get it in the game_ (when referring to transferring an graphical asset from authoring tool to the coding environment). The advantages of such shortcuts are, as discussed, to help with the prioritisation and ideation processes, to facilitate peer propagation of ideas, and potentially to inform debugging and improvements to increase game playability.
 
