--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -933,16 +933,18 @@ This direction of the findings of this chapter, support findings on design patte
 Such an interpretation is adopted by Eriksson and colleagues using gameplay design patterns with young people [-@eriksson_using_2019] which drew inspiration from the value of design patterns as a form of "intermediate-level concept" as advocated by fellow researchers as a way of sharing results of research [@barendregt_intermediate-level_2018].
 
 
-**In terms of recommendations for researchers / practitioners of an intermediate framework:**
-According to [@barendregt_intermediate-level_2018]  when choosing design patterns, choosing a suitable the level of abstraction is recommended.  
+<!-- **In terms of recommendations for researchers / practitioners of an intermediate framework:** -->
 
-One motivation of LOA is that is is useful for learners to know at what level of abstraction they are operating,
+Waite and colleagues propose that abstraction should be taught to pupils [@waite_abstraction_2016].
 
-My own notes and reflections in appendix.learning map cautioned me against such shifts in perspectives for fear of interrupting the flow of participant making. I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus. There were already shifting from the larger goal of making an engaging game for a real and imagined audience to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. This chapter has outlined the potential of GDP concepts, especially used within playtesting, to support these participant shifts in perspective. To then add an additional goal of then connecting to abstract curricular concepts seemed counter productive to the overall aim of acculturation to game making tools and processes and developing an inclusive idioculture.
+Waite and colleagues also propose the utility of awareness of LOA in terms of learners knowing at what level of abstraction they are operating, although the authors call for further to confirm findings  [@waite_abstraction_2018-1].
+
+As a challenge these findings, My own notes and reflections in appendix.learning map cautioned me against such shifts in perspectives for fear of interrupting the flow of participant making. I had a reluctance to shift learners away from the practical implementation of repeated game design patterns to focus on more abstract, de-contextualised conceptions of the knowledge. My concern hinged on the potential disorientation of imposed shifts of focus. There were already shifting from the larger goal of making an engaging game for a real and imagined audience to a narrower goal of implementing a game design pattern and the technical actions and operations needed to complete it. This chapter has outlined the potential of GDP concepts, especially used within playtesting, to support these participant shifts in perspective. To then add an additional goal of then connecting to abstract curricular concepts seemed counter productive to the overall aim of acculturation to game making tools and processes and developing an inclusive idioculture.
+
 
 As such this research has only more theoretical propositions rather than participant data. However, my reflections do support a proposition that there is  utility is that facilitators to be aware of the level of abstraction both that present in different elements of project learning design and that of the concepts that learners are working with. Different purposes and contexts of learning may require different interpretations, for example greater awareness of abstract concepts for reasons of assessment.
 
-The evidence and examples surfaced in this paragraph support a this view of GDPs, as an productive intermediate-level framework and contributes a series of grounded pedagogical instances via examples. It also proposes GDPs as potentially more productive and accessible framework in terms of pedagogical uses than that of computational thinking when making games.
+According to [@barendregt_intermediate-level_2018]  when choosing design patterns, choosing a suitable the level of abstraction is recommended. The evidence and examples surfaced in this paragraph support a view of GDPs, as an productive intermediate-level framework and contributes a series of grounded pedagogical instances via examples. It also proposes GDPs as potentially more productive and accessible framework in terms of pedagogical uses than that of computational thinking when making games.
 
 **integrate better**
 
@@ -985,7 +987,7 @@ Any other analysis on the part of the participant can wait until the process bec
 This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
 
 
-**Some of the following processes stand out for particular promise.** LINK TO THE SUGGESTIONS FOR PractitionerS. 
+**Some of the following processes stand out for particular promise.** LINK TO THE SUGGESTIONS FOR PractitionerS.
 
 Both the GDPs and the sub-actions of the wider activity design become short-cuts which stand in for previously tricky to complete set of actions.
 
